Vytvořeno pomocí služby Colaboratory

--- a/colab/Ames_Housing_XGB_Experiment.ipynb
+++ b/colab/Ames_Housing_XGB_Experiment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ames-Housing-XGB-Experiment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOicGk7F2/opmjwPB4fQRC1",
+      "authorship_tag": "ABX9TyMqwxGB/udPTy74sy43+Ezu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -340,6 +340,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CA1HpTZ6EnHt"
+      },
+      "source": [
+        "## Sharing data through file"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Vz0Z4s8Lf2tN"
@@ -358,7 +367,7 @@
       "source": [
         "data = {'data': X_test.head(10).to_dict(orient='list')}"
       ],
-      "execution_count": 25,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -399,11 +408,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m8bdvLx8q9DG",
-        "outputId": "c84cbf20-593e-4ebd-8fc4-1ee152b72b2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m8bdvLx8q9DG",
+        "outputId": "c84cbf20-593e-4ebd-8fc4-1ee152b72b2d"
       },
       "source": [
         "model.predict(data_sample)"
@@ -426,9 +435,59 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8C5agq-9EvqL"
+      },
+      "source": [
+        "## Sharing data through variable"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5B-5uA4jri6m"
+      },
+      "source": [
+        "data_json = str.encode(json.dumps(data))"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WbKJyt4h1BzX",
+        "outputId": "efa726fe-5a27-4ea3-f30a-ec366e7619a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "data_sample2 = json.loads(data_json)\n",
+        "model.predict(pd.DataFrame.from_dict(data_sample2['data']))"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([176260.58, 126176.65, 177646.4 , 135595.06, 164705.7 , 144124.33,\n",
+              "       155674.1 , 233183.14, 247349.3 , 188598.83], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iPjkonWx1fQp"
       },
       "source": [
         ""
