--- a/automl.ipynb
+++ b/automl.ipynb
@@ -1146,9 +1146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(service.get_logs())"
    ]
@@ -1176,13 +1184,6 @@
     "test = train_xgb.label_encode(test)\n",
     "data = {'data': test.head().to_dict(orient='list')}\n",
     "\n",
-    "# data = {\n",
-    "#     \"data\":\n",
-    "#     [\n",
-    "#         test.iloc[0].to_dict(),\n",
-    "#         test.iloc[1].to_dict(),\n",
-    "#     ],\n",
-    "# }\n",
     "# Replace the next cell with the code from 'Consume' tab of the endpoint\n",
     "# and delete 'data = {}' assignment as data is defined in this cell!  "
    ]
@@ -1240,13 +1241,7 @@
     "allowSelfSignedHttps(True) # this line is needed if you use self-signed certificate in your scoring service.\n",
     "\n",
     "# Request data goes here\n",
-    "data = {\n",
-    "    \"data\":\n",
-    "    [\n",
-    "        test.iloc[0].to_dict(),\n",
-    "        test.iloc[1].to_dict(),\n",
-    "    ],\n",
-    "}\n",
+    "#\n",
     "\n",
     "body = str.encode(json.dumps(data))\n",
     "\n",
@@ -1268,27 +1263,6 @@
     "    print(error.info())\n",
     "    print(json.loads(error.read().decode(\"utf8\", 'ignore')))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1316,25 +1290,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "service.delete()\n",
     "# Delete() is used to deprovision and delete the AmlCompute target. \n",
     "cpu_cluster.delete()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
