--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "*TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external.*\n",
     "\n",
-    "The Ames Housing dataset is downloaded from Kaggle.com and registered to the workspace. For HyperDrive child runs is used CSV file in local folder to prevent \"Too many requests\" error."
+    "The Ames Housing dataset is downloaded from Kaggle.com and registered to the workspace. For HyperDrive child runs, the CSV file in local folder (side-effect of the dataset registration) is used to prevent \"Too many requests\" error from Kaggle."
    ]
   },
   {
@@ -599,6 +599,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cf. results of a previous experiment\n",
+    "# AutoML's r2_score:\t0.8942710428327086\n",
+    "# HDR-XGB's r2_score:\t0.9130778329488691"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "gather": {
@@ -946,7 +957,7 @@
     "ws = Workspace.from_config()\n",
     "model = Model(ws, 'Ames-Housing-XGB-Model')\n",
     "\n",
-    "myenv = Environment.get(workspace=ws, name=\"project-env\", version=\"1\")\n",
+    "myenv = Environment.get(workspace=ws, name=\"project-env\")\n",
     "\n",
     "inference_config = InferenceConfig(entry_script=\"entry_script.py\", environment=myenv)\n",
     "\n",
