--- a/automl.ipynb
+++ b/automl.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "*TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external.*\n",
     "\n",
-    "The Ames Housing dataset is downloaded from the Kaggle.com and registered to the workspace."
+    "The Ames Housing dataset is downloaded from Kaggle.com and registered to the workspace."
    ]
   },
   {
@@ -1131,7 +1131,7 @@
     "ws = Workspace.from_config()\n",
     "model = Model(ws, 'Ames-Housing-AutoML-Model')\n",
     "\n",
-    "myenv = Environment.get(workspace=ws, name=\"project-env\", version=\"1\")\n",
+    "myenv = Environment.get(workspace=ws, name=\"project-env\")\n",
     "inference_config = InferenceConfig(entry_script=\"aml-outputs/scoring_file_v_1_0_0.py\", environment=myenv)\n",
     "\n",
     "service_name = 'ames-housing-aml-' + str(uuid.uuid4())[:4]\n",
