--- a/automl.ipynb
+++ b/automl.ipynb
@@ -80,9 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InProgress......\n",
-      "SucceededProvisioning operation finished, operation \"Succeeded\"\n",
-      "Succeeded......................\n",
+      "Found existing cluster, use it.\n",
+      "Succeeded\n",
       "AmlCompute wait for completion finished\n",
       "\n",
       "Minimum number of nodes requested have been provisioned\n"
@@ -138,27 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train.shape = (1460, 80), test.shape = (1459, 79)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Method register_pandas_dataframe: This is an experimental method, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validating arguments.\n",
-      "Arguments validated.\n",
-      "Successfully obtained datastore reference and path.\n",
-      "Uploading file to managed-dataset/f173c699-8590-4dbf-807e-264adc5ed3ce/\n",
-      "Successfully uploaded file to datastore.\n",
-      "Creating and registering a new dataset.\n",
-      "Successfully created and registered a new dataset.\n"
+      "Found registered Ames-housing-dataset, use it.\n"
      ]
     }
    ],
@@ -888,18 +867,39 @@
    "source": [
     "Remember you have to deploy only one of the two models you trained. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
     "\n",
-    "*TODO: In the cell below, register the model, create an inference config and deploy the model as a web service.*"
+    "*TODO: In the cell below, register the model, create an inference config and deploy the model as a web service.*\n",
+    "\n",
+    "**Even if it is not necessary to deploy the AutoML model, I am testing the solution to the \"AciDeploymentFailed\" error I encountered in previus experiments.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('aml-outputs/best_aml_metrics.json', 'r') as file:\n",
+    "    best_run_metrics = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "gather": {
      "logged": 1629038256297
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering model Ames-Housing-AutoML-Model\n",
+      "Ames-Housing-AutoML-Model\tAmes-Housing-AutoML-Model:1\t1\n"
+     ]
+    }
+   ],
    "source": [
     "# Register the best model\n",
     "model = Model.register(ws, model_path='aml-outputs/model.pkl', model_name='Ames-Housing-AutoML-Model', tags=best_run_metrics)\n",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "gather": {
      "logged": 1629038264016
@@ -927,13 +927,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "gather": {
      "logged": 1629038274840
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "    \"databricks\": {\n",
+       "        \"eggLibraries\": [],\n",
+       "        \"jarLibraries\": [],\n",
+       "        \"mavenLibraries\": [],\n",
+       "        \"pypiLibraries\": [],\n",
+       "        \"rcranLibraries\": []\n",
+       "    },\n",
+       "    \"docker\": {\n",
+       "        \"arguments\": [],\n",
+       "        \"baseDockerfile\": null,\n",
+       "        \"baseImage\": \"mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04:20210615.v1\",\n",
+       "        \"baseImageRegistry\": {\n",
+       "            \"address\": null,\n",
+       "            \"password\": null,\n",
+       "            \"registryIdentity\": null,\n",
+       "            \"username\": null\n",
+       "        },\n",
+       "        \"enabled\": false,\n",
+       "        \"platform\": {\n",
+       "            \"architecture\": \"amd64\",\n",
+       "            \"os\": \"Linux\"\n",
+       "        },\n",
+       "        \"sharedVolumes\": true,\n",
+       "        \"shmSize\": null\n",
+       "    },\n",
+       "    \"environmentVariables\": {\n",
+       "        \"EXAMPLE_ENV_VAR\": \"EXAMPLE_VALUE\"\n",
+       "    },\n",
+       "    \"inferencingStackVersion\": null,\n",
+       "    \"name\": \"project-env\",\n",
+       "    \"python\": {\n",
+       "        \"baseCondaEnvironment\": null,\n",
+       "        \"condaDependencies\": {\n",
+       "            \"channels\": [\n",
+       "                \"anaconda\",\n",
+       "                \"conda-forge\"\n",
+       "            ],\n",
+       "            \"dependencies\": [\n",
+       "                \"python=3.6.2\",\n",
+       "                {\n",
+       "                    \"pip\": [\n",
+       "                        \"azureml-train-automl-runtime==1.33.0\",\n",
+       "                        \"inference-schema\",\n",
+       "                        \"azureml-interpret==1.33.0\",\n",
+       "                        \"azureml-defaults==1.33.0\"\n",
+       "                    ]\n",
+       "                },\n",
+       "                \"numpy>=1.16.0,<1.19.0\",\n",
+       "                \"pandas==0.25.1\",\n",
+       "                \"scikit-learn==0.22.1\",\n",
+       "                \"py-xgboost<=0.90\",\n",
+       "                \"fbprophet==0.5\",\n",
+       "                \"holidays==0.9.11\",\n",
+       "                \"psutil>=5.2.2,<6.0.0\"\n",
+       "            ],\n",
+       "            \"name\": \"azureml_59fba923920e15fa8fbe872c700ad33f\"\n",
+       "        },\n",
+       "        \"condaDependenciesFile\": null,\n",
+       "        \"interpreterPath\": \"python\",\n",
+       "        \"userManagedDependencies\": false\n",
+       "    },\n",
+       "    \"r\": null,\n",
+       "    \"spark\": {\n",
+       "        \"packages\": [],\n",
+       "        \"precachePackages\": true,\n",
+       "        \"repositories\": []\n",
+       "    },\n",
+       "    \"version\": \"3\"\n",
+       "}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from azureml.core.environment import Environment\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
@@ -947,9 +1027,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tips: You can try get_logs(): https://aka.ms/debugimage#dockerlog or local deployment: https://aka.ms/debugimage#debug-locally to debug if deployment takes longer than 10 minutes.\n",
+      "Running\n",
+      "2021-08-20 15:00:58+00:00 Creating Container Registry if not exists.\n",
+      "2021-08-20 15:00:59+00:00 Registering the environment.\n",
+      "2021-08-20 15:01:00+00:00 Use the existing image.\n",
+      "2021-08-20 15:01:00+00:00 Generating deployment configuration.\n",
+      "2021-08-20 15:01:01+00:00 Submitting deployment to compute.\n",
+      "2021-08-20 15:01:04+00:00 Checking the status of deployment ames-housing-aml-f110..\n",
+      "2021-08-20 15:04:45+00:00 Checking the status of inference endpoint ames-housing-aml-f110.\n",
+      "Succeeded\n",
+      "ACI service creation operation finished, operation \"Succeeded\"\n",
+      "CPU times: user 743 ms, sys: 34.8 ms, total: 778 ms\n",
+      "Wall time: 3min 53s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "import uuid\n",
@@ -962,7 +1062,8 @@
     "ws = Workspace.from_config()\n",
     "model = Model(ws, 'Ames-Housing-AutoML-Model')\n",
     "\n",
-    "myenv = Environment.get(workspace=ws, name=\"project-env\")\n",
+    "# Using another environment as recommended by Akintunde, an Udacity mentor\n",
+    "myenv = Environment.get(workspace=ws, name=\"AzureML-AutoML\")\n",
     "inference_config = InferenceConfig(entry_script=\"aml-outputs/scoring_file_v_1_0_0.py\", environment=myenv)\n",
     "\n",
     "service_name = 'ames-housing-aml-' + str(uuid.uuid4())[:4]\n",
@@ -977,10 +1078,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-20T15:04:36,686530900+00:00 - rsyslog/run \n",
+      "2021-08-20T15:04:36,690225900+00:00 - iot-server/run \n",
+      "2021-08-20T15:04:36,696348200+00:00 - gunicorn/run \n",
+      "Dynamic Python package installation is disabled.\n",
+      "Starting HTTP server\n",
+      "2021-08-20T15:04:36,711672100+00:00 - nginx/run \n",
+      "rsyslogd: /azureml-envs/azureml_3489174eb648a475780c9959ff366072/lib/libuuid.so.1: no version information available (required by rsyslogd)\n",
+      "EdgeHubConnectionString and IOTEDGE_IOTHUBHOSTNAME are not set. Exiting...\n",
+      "2021-08-20T15:04:37,243257500+00:00 - iot-server/finish 1 0\n",
+      "2021-08-20T15:04:37,245978900+00:00 - Exit code 1 is normal. Not restarting iot-server.\n",
+      "Starting gunicorn 20.1.0\n",
+      "Listening at: http://127.0.0.1:31311 (58)\n",
+      "Using worker: sync\n",
+      "worker timeout is set to 300\n",
+      "Booting worker with pid: 86\n",
+      "SPARK_HOME not set. Skipping PySpark Initialization.\n",
+      "Generating new fontManager, this may take some time...\n",
+      "Initializing logger\n",
+      "2021-08-20 15:04:40,695 | root | INFO | Starting up app insights client\n",
+      "logging socket was found. logging is available.\n",
+      "logging socket was found. logging is available.\n",
+      "2021-08-20 15:04:40,696 | root | INFO | Starting up request id generator\n",
+      "2021-08-20 15:04:40,696 | root | INFO | Starting up app insight hooks\n",
+      "2021-08-20 15:04:40,696 | root | INFO | Invoking user's init function\n",
+      "2021-08-20 15:04:46,470 | azureml.core | WARNING | Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception cannot import name 'RunType'.\n",
+      "Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception cannot import name 'RunType'.\n",
+      "2021-08-20 15:04:48,069 | root | INFO | Users's init has completed successfully\n",
+      "2021-08-20 15:04:48,074 | root | INFO | Skipping middleware: dbg_model_info as it's not enabled.\n",
+      "2021-08-20 15:04:48,074 | root | INFO | Skipping middleware: dbg_resource_usage as it's not enabled.\n",
+      "Generating swagger file: /tmp/tmpdfipu4v7\n",
+      "2021-08-20 15:04:48,085 | root | INFO | Scoring timeout is found from os.environ: 60000 ms\n",
+      "2021-08-20 15:04:48,102 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:04:48 +0000] \"GET /swagger.json HTTP/1.0\" 200 8368 \"-\" \"Go-http-client/1.1\"\n",
+      "2021-08-20 15:04:49,485 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:04:49 +0000] \"GET /swagger.json HTTP/1.0\" 200 8368 \"-\" \"Go-http-client/1.1\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "## Yes, no it works!!\n",
     "print(service.get_logs())"
    ]
   },
@@ -998,13 +1143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare data for request\n",
     "_ , test = train_xgb.load_data_clean()\n",
-    "test = train_xgb.label_encode(test)\n",
     "data = {'data': test.head().to_dict(orient='list')}\n",
     "\n",
     "# Replace the next cell with the code from 'Consume' tab of the endpoint\n",
@@ -1034,22 +1178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598432707604
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\"{\\\\\"result\\\\\": [121027.45623469575, 161643.33678900695, 180129.95527012326, 186432.5618099261, 192173.95002451804]}\"'\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import urllib.request\n",
     "import json\n",
@@ -1064,12 +1203,11 @@
     "allowSelfSignedHttps(True) # this line is needed if you use self-signed certificate in your scoring service.\n",
     "\n",
     "# Request data goes here\n",
-    "#\n",
     "\n",
     "body = str.encode(json.dumps(data))\n",
     "\n",
-    "url = 'http://56120259-5690-491e-a8d6-bc13c75b82de.southcentralus.azurecontainer.io/score'\n",
-    "api_key = '' # Replace this with the API key for the web service\n",
+    "url = 'http://c0a484ea-faf1-420a-9655-f2ad4967541c.southcentralus.azurecontainer.io/score'\n",
+    "api_key = 'gUMGn4uSgbtKhpQgMX6YLjaF5K2lb1Tv' # Replace this with the API key for the web service\n",
     "headers = {'Content-Type':'application/json', 'Authorization':('Bearer '+ api_key)}\n",
     "\n",
     "req = urllib.request.Request(url, body, headers)\n",
@@ -1110,10 +1248,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-20T15:04:36,686530900+00:00 - rsyslog/run \n",
+      "2021-08-20T15:04:36,690225900+00:00 - iot-server/run \n",
+      "2021-08-20T15:04:36,696348200+00:00 - gunicorn/run \n",
+      "Dynamic Python package installation is disabled.\n",
+      "Starting HTTP server\n",
+      "2021-08-20T15:04:36,711672100+00:00 - nginx/run \n",
+      "rsyslogd: /azureml-envs/azureml_3489174eb648a475780c9959ff366072/lib/libuuid.so.1: no version information available (required by rsyslogd)\n",
+      "EdgeHubConnectionString and IOTEDGE_IOTHUBHOSTNAME are not set. Exiting...\n",
+      "2021-08-20T15:04:37,243257500+00:00 - iot-server/finish 1 0\n",
+      "2021-08-20T15:04:37,245978900+00:00 - Exit code 1 is normal. Not restarting iot-server.\n",
+      "Starting gunicorn 20.1.0\n",
+      "Listening at: http://127.0.0.1:31311 (58)\n",
+      "Using worker: sync\n",
+      "worker timeout is set to 300\n",
+      "Booting worker with pid: 86\n",
+      "SPARK_HOME not set. Skipping PySpark Initialization.\n",
+      "Generating new fontManager, this may take some time...\n",
+      "Initializing logger\n",
+      "2021-08-20 15:04:40,695 | root | INFO | Starting up app insights client\n",
+      "logging socket was found. logging is available.\n",
+      "logging socket was found. logging is available.\n",
+      "2021-08-20 15:04:40,696 | root | INFO | Starting up request id generator\n",
+      "2021-08-20 15:04:40,696 | root | INFO | Starting up app insight hooks\n",
+      "2021-08-20 15:04:40,696 | root | INFO | Invoking user's init function\n",
+      "2021-08-20 15:04:46,470 | azureml.core | WARNING | Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception cannot import name 'RunType'.\n",
+      "Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception cannot import name 'RunType'.\n",
+      "2021-08-20 15:04:48,069 | root | INFO | Users's init has completed successfully\n",
+      "2021-08-20 15:04:48,074 | root | INFO | Skipping middleware: dbg_model_info as it's not enabled.\n",
+      "2021-08-20 15:04:48,074 | root | INFO | Skipping middleware: dbg_resource_usage as it's not enabled.\n",
+      "Generating swagger file: /tmp/tmpdfipu4v7\n",
+      "2021-08-20 15:04:48,085 | root | INFO | Scoring timeout is found from os.environ: 60000 ms\n",
+      "2021-08-20 15:04:48,102 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:04:48 +0000] \"GET /swagger.json HTTP/1.0\" 200 8368 \"-\" \"Go-http-client/1.1\"\n",
+      "2021-08-20 15:04:49,485 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:04:49 +0000] \"GET /swagger.json HTTP/1.0\" 200 8368 \"-\" \"Go-http-client/1.1\"\n",
+      "2021-08-20 15:05:18,598 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:05:18 +0000] \"GET /swagger.json HTTP/1.0\" 200 8368 \"-\" \"Go-http-client/1.1\"\n",
+      "2021-08-20 15:05:20,714 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:05:20 +0000] \"GET /swagger.json HTTP/1.0\" 200 8368 \"-\" \"Go-http-client/1.1\"\n",
+      "2021-08-20 15:06:37,563 | root | INFO | Validation Request Content-Type\n",
+      "2021-08-20 15:06:37,564 | root | INFO | Scoring Timer is set to 60.0 seconds\n",
+      "2021-08-20 15:06:38,057 | root | INFO | 200\n",
+      "127.0.0.1 - - [20/Aug/2021:15:06:38 +0000] \"POST /score HTTP/1.0\" 200 115 \"-\" \"Python-urllib/3.6\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "print(service.get_logs())\n",
     "service.delete()\n",
     "# Delete() is used to deprovision and delete the AmlCompute target. \n",
     "cpu_cluster.delete()"
